<resources>
    <!-- Activity main -->
    <string name="app_name">LIQID</string>

    <string name="Speed">Speed</string>
    <string name="Travel">Travel</string>
    <string name="Wait">Wait</string>

    <string name="Force">Force</string>
    <string name="ForceUnits">Force [N]</string>
    <string name="mockForce">12</string>

    <string name="Run">Run</string>

    <string name="forceField"> </string>

    <string name="selectList">Select List</string>

    <string name="force_value_format">%s</string>

    Open activity main
    <string name="Save">Save</string>
    <string name="ViewLists">View List</string>
    <string name="new_list">Enter name of new list</string>
    <string name="rename_list">Enter new name of list</string>

    <string name="large_text">large_text</string>

    <string name="openMain">Open activity main</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="textview">TextView</string>

    <string name="index">Index</string>
    <string name="speed">speed</string>
    <string name="travel">travel</string>
    <string name="wait">wait</string>
    <string name="force">force</string>

    <string name="export">Export</string>
    <string name="list_delete">Are you sure you want to delete this list?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="search">Search</string>
    <string name="paired_devices">Search for paired devices</string>
    <string name="connect">Connect</string>
</resources>